[gd_scene load_steps=28 format=3 uid="uid://b3h84hsqrhdnw"]

[ext_resource type="Script" path="res://entities/enemy/boar/boar.gd" id="1_sr7yn"]
[ext_resource type="Texture2D" uid="uid://b8kqndj05cghd" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet-White.png" id="2_tka82"]
[ext_resource type="Texture2D" uid="uid://ddb1ygpjuig5j" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet2-White.png" id="3_4itbv"]
[ext_resource type="Texture2D" uid="uid://dbjnrf6gejio6" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Idle/Idle-Sheet-White.png" id="4_24f4f"]
[ext_resource type="Texture2D" uid="uid://dw7wsd8y68aig" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Run/Run-Sheet-White.png" id="5_lsh8m"]
[ext_resource type="Texture2D" uid="uid://ropbljs46x5v" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Walk/Walk-Base-Sheet-White.png" id="6_hgnuv"]
[ext_resource type="Script" path="res://entities/damageable.gd" id="7_xisdt"]
[ext_resource type="Script" path="res://entities/finite_state_machine.gd" id="8_2kn6s"]
[ext_resource type="Script" path="res://entities/enemy/boar/idle.gd" id="9_sd06e"]
[ext_resource type="Script" path="res://entities/enemy/boar/walk.gd" id="10_mte3t"]
[ext_resource type="Script" path="res://entities/enemy/boar/attack.gd" id="11_j51t1"]
[ext_resource type="Script" path="res://entities/hit_state.gd" id="12_amnyq"]
[ext_resource type="Script" path="res://entities/enemy/boar/dead_state.gd" id="14_87pt7"]
[ext_resource type="Script" path="res://entities/enemy/boar/debug.gd" id="14_suj1s"]
[ext_resource type="Script" path="res://entities/facing_player_detection.gd" id="14_vmuo2"]
[ext_resource type="Script" path="res://entities/facing_collision.gd" id="15_c53pt"]
[ext_resource type="Script" path="res://entities/weapon.gd" id="17_58clm"]

[sub_resource type="Animation" id="Animation_yxuu8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y4544"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_tka82")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_xo8i4"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.965936),
"update": 1,
"values": [ExtResource("3_4itbv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_fqmwb"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_24f4f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_1okbo"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_lsh8m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_bvr8d"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_hgnuv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ads7n"]
_data = {
"RESET": SubResource("Animation_yxuu8"),
"dead": SubResource("Animation_y4544"),
"hit": SubResource("Animation_xo8i4"),
"idle": SubResource("Animation_fqmwb"),
"run": SubResource("Animation_1okbo"),
"walk": SubResource("Animation_bvr8d")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1b2df"]
radius = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ntkl"]
radius = 27.5
height = 164.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3wpyw"]
radius = 2.0
height = 10.0

[node name="boar_white" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_sr7yn")

[node name="Debug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -23.0
offset_top = -32.0
offset_right = 26.0
offset_bottom = -6.0
text = "idle"
script = ExtResource("14_suj1s")
state_machine = NodePath("../FiniteStateMachine")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_lsh8m")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ads7n")
}

[node name="Damageable" type="Node" parent="."]
script = ExtResource("7_xisdt")
max_health = 30.0
health = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1b2df")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("debug")]
script = ExtResource("8_2kn6s")
debug = NodePath("../Debug")

[node name="Idle" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("damageable", "character")]
script = ExtResource("9_sd06e")
damageable = NodePath("../../Damageable")
character = NodePath("../..")

[node name="Timer" type="Timer" parent="FiniteStateMachine/Idle"]
wait_time = 2.0
one_shot = true

[node name="Walk" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("damageable", "character")]
script = ExtResource("10_mte3t")
damageable = NodePath("../../Damageable")
character = NodePath("../..")

[node name="TurnTimer" type="Timer" parent="FiniteStateMachine/Walk"]
wait_time = 4.0
one_shot = true

[node name="Attack" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("damageable", "snout", "character")]
script = ExtResource("11_j51t1")
damageable = NodePath("../../Damageable")
snout = NodePath("../../Snout")
character = NodePath("../..")

[node name="HitState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("character", "sprite")]
script = ExtResource("12_amnyq")
return_state_name = "Attack"
character = NodePath("../..")
sprite = NodePath("../../Sprite2D")

[node name="Timer" type="Timer" parent="FiniteStateMachine/HitState"]
wait_time = 0.2
one_shot = true

[node name="Dead" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("14_87pt7")
character = NodePath("../..")

[node name="PlayerDetection" type="Area2D" parent="." node_paths=PackedStringArray("character", "facing_shape")]
collision_layer = 0
collision_mask = 2
script = ExtResource("14_vmuo2")
character = NodePath("..")
facing_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-57, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2ntkl")
script = ExtResource("15_c53pt")
facing_left_position = Vector2(-67, 0)
facing_right_position = Vector2(62, 0)

[node name="Snout" type="Area2D" parent="." node_paths=PackedStringArray("character", "facing_shape")]
collision_layer = 0
collision_mask = 2
script = ExtResource("17_58clm")
character = NodePath("..")
facing_shape = NodePath("FacingCollision")
damage = 20.0
knockback_speed = 200.0

[node name="FacingCollision" type="CollisionShape2D" parent="Snout"]
position = Vector2(-17, 5)
shape = SubResource("CapsuleShape2D_3wpyw")
script = ExtResource("15_c53pt")
facing_left_position = Vector2(-18, 6)
facing_right_position = Vector2(16, 6)

[connection signal="timeout" from="FiniteStateMachine/Idle/Timer" to="FiniteStateMachine/Idle" method="_on_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Walk/TurnTimer" to="FiniteStateMachine/Walk" method="_on_turn_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/HitState/Timer" to="FiniteStateMachine/HitState" method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Walk" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="FiniteStateMachine/Attack" method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Snout" to="Snout" method="_on_body_entered"]
